--- a/src/Style/banner.css
+++ b/src/Style/banner.css
@@ -1,4 +1,44 @@
 .banner-card>img{
-    height: 70vh;
-    width: 100%;
+    /* height: 90vh; */
+    /* width: 100%; */
+    max-width: 100%;
+    height: auto;
+   
+
+}
+
+.banner-card{
+    /* display: flex;
+    flex-direction: column;
+    align-content: center; */
+    position: relative;
+      display: inline-block;
+}
+.banner-card>button{
+    /* align-items: center;
+    z-index: 20;
+    background-color: brown; */
+    position: absolute;
+      top: 50%;
+      left: 50%;
+       transform: translate(-50%, -50%); 
+      padding: 20px 35px;
+      font-size: 17px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, font-size 0.3s ease;
+     
+}
+.banner-card>button:hover{
+
+    background-color: #034fa0;
+   font-size: 20px;
+   
+    
+    
 }
