--- a/src/Style/navbar.css
+++ b/src/Style/navbar.css
@@ -1,11 +1,4 @@
-.navbar{
-    border: 2px solid black;
-}
-/* .navbar{
-    display: flex;
-    flex-direction: row;
-    padding:40px;
-}  */
+
 
 .navbar{
         z-index: 1000;
@@ -16,6 +9,7 @@
         justify-content: center;
         align-items: center;
         border-bottom: 1px solid rgba(43, 43, 43, 0.137);
+        border-radius: 4px;
         background: linear-gradient(90deg, rgb(205, 255, 216) 0%, rgb(148, 185, 255) 100%) 0px 0px / 312px 256px;
         background-size: 100% 100vh;
         background-attachment: fixed;
