--- a/src/Style/service.css
+++ b/src/Style/service.css
@@ -1,23 +1,44 @@
 .services{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    margin: 5vmax 0 0 0;
+    /* margin: 5vmax 0 0 0; */
     background-color: white;
     padding: 1vmax;
     padding-bottom: 0;
-    margin-left: 13vmax;
+    /* justify-content: space-evenly; */
+    /* margin-left: 13vmax; */
 }
+
 .service-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     padding: 10px 20px;
-    background-color: rgb(217, 225, 225);
-    margin: 2px;
-    height: 20vh;
-    width: 35vh;
+    background-color: rgb(245, 250, 250);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    transition:  transform 0.3s;
+    margin: 4px;
+    height: 40vh;
+    width: 48vh;
     cursor: pointer;
+    align-items: center;
+    border-radius: 4px;
+    margin-top: 30px;
    
 }
+.service-item:hover{
+    transform: scale(1.08);
+}
 .service-item>span{
-
+ color:rgb(34 184 181); 
     padding: 20px 30px;
-    font-size: xx-large;
+    font-size: 55px;
+}
+.service-item>h3{
+    /* margin-top: 20px; */
+    color: #337ab7;
+}
+.service-item>p{
+    /* margin-top: 10px; */
+    color:black; 
 }
