--- a/src/Style/banner.css
+++ b/src/Style/banner.css
@@ -18,6 +18,7 @@
     /* align-items: center;
     z-index: 20;
     background-color: brown; */
+    width: 8%;
     position: absolute;
       top: 50%;
       left: 50%;
