--- a/src/Style/navbar.css
+++ b/src/Style/navbar.css
@@ -27,6 +27,12 @@
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 17px;
+
+}
+.navbar>div>a:hover{
+    color: white;
+    transition: color 0.2s ease;
+
 }
 
 
